# ChangeLog for dev-ruby/rubygems
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rubygems/ChangeLog,v 1.81 2008/01/13 07:12:34 redhatter Exp $

  13 Jan 2008; Stuart Longland <redhatter@gentoo.org> rubygems-1.0.1.ebuild:
  Tested and working on MIPS: ~mips keyword added. (note to self: tested using
  ebuild /path/to/rubygems-ver.ebuild unpack ; cd $WORKDIR ; rake test -- run
  as user)

  21 Dec 2007; Richard Brown <rbrown@gentoo.org> rubygems-1.0.1.ebuild:
  Fix ebuild to install gem command properly.

*rubygems-1.0.1 (21 Dec 2007)

  21 Dec 2007; Richard Brown <rbrown@gentoo.org> -rubygems-0.9.5.ebuild,
  +rubygems-1.0.1.ebuild:
  Version bump, remove broken version.

  19 Dec 2007; Brent Baude <ranger@gentoo.org> rubygems-0.9.4-r2.ebuild:
  Marking rubygems-0.9.4-r2.ebuild  ppc and ppc64 stable for bug 202608

  19 Dec 2007; Raúl Porcel <armin76@gentoo.org> rubygems-0.9.4-r2.ebuild:
  alpha/ia64/x86 stable wrt #202608

  17 Dec 2007; Jeroen Roovers <jer@gentoo.org> rubygems-0.9.4-r2.ebuild:
  Stable for HPPA (bug #202608).

  17 Dec 2007; Ferris McCormick <fmccor@gentoo.org>
  rubygems-0.9.4-r2.ebuild:
  Sparc stable --- Bug #202608 --- running since 16 November.

*rubygems-0.9.5 (15 Dec 2007)

  15 Dec 2007; Richard Brown <rbrown@gentoo.org> +rubygems-0.9.5.ebuild:
  Adding a new version of rubygems

  01 Dec 2007; Markus Rothe <corsair@gentoo.org> rubygems-0.9.4-r1.ebuild:
  Stable on ppc64

*rubygems-0.9.4-r2 (18 Nov 2007)

  18 Nov 2007; Hans de Graaff <graaff@gentoo.org>
  +files/rubygems-0.9.4-shebang-env-fix.patch, +rubygems-0.9.4-r2.ebuild:
  Backport a patch from rubygems SVN to fix #199378.

  04 Nov 2007; Hans de Graaff <graaff@gentoo.org>
  -files/rubygems-0.9.0-build-c-extensions.patch,
  -files/rubygems-0.9.0-build-from-yaml.patch, -rubygems-0.9.0-r2.ebuild:
  Remove old version that will never become stable

  03 Nov 2007; Raúl Porcel <armin76@gentoo.org> rubygems-0.9.4-r1.ebuild: