@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/rubygems
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rubygems/ChangeLog,v 1.81 2008/01/13 07:12:34 redhatter Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rubygems/ChangeLog,v 1.82 2008/01/21 11:30:38 rbrown Exp $
+
+  21 Jan 2008; Richard Brown <rbrown@gentoo.org> rubygems-1.0.1.ebuild:
+  Fix sandbox violations on first install, thanks to caster, bug #202109
 
   13 Jan 2008; Stuart Longland <redhatter@gentoo.org> rubygems-1.0.1.ebuild:
   Tested and working on MIPS: ~mips keyword added. (note to self: tested using
